@@ -3,6 +3,14 @@
 	reviewed by: Xavier Queralt
 
 	* flumotion/component/consumers/disker/disker.py:
+	Don't start recording until we get the first tdt if we 
+	are syncing on tdt's
+
+2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	reviewed by: Xavier Queralt
+
+	* flumotion/component/consumers/disker/disker.py:
 	Add log category to the disker
 
 2010-11-26  Andoni Morales Alastruey  <amorales@flumotion.com>
